--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-    <head>
+<!DOCTYPE html>
+<html>    
+<head>
       <meta charset='utf-8'>
       <meta name='viewport' content='width=device-width'>
       <title>Privacy Policy</title>
@@ -75,4 +77,4 @@
                   Privacy Policy, do not hesitate to contact me at cordescodes@gmail.com.
                 </p>
     </body>
-      
+</html>    
