--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
     <strong>Privacy Policy</strong> <p>
-                  Notes (the "Service") is an open source app provided by
+                  Yet Another Notes App (the "Service") is an open source app provided by
                   Sam Cordes.
                 </p> <p>
                   This page is used to inform visitors regarding my
